<김민석> controller 수정