@@ -1,58 +1,83 @@
 package com.example.demo.post.controller;
 
-import com.example.demo.Login.Repository.UserRepository;
+import com.example.demo.Login.dto.UserLoginResponseDto;
+import com.example.demo.Login.Repository.UserRepository; // ← 패키지 경로 그대로
 import com.example.demo.post.dto.PostRequestDto;
 import com.example.demo.post.dto.PostResponseDto;
 import com.example.demo.post.service.PostService;
-import lombok.RequiredArgsConstructor;
+import jakarta.servlet.http.HttpSession;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
-@RequiredArgsConstructor
 @RequestMapping("/api/posts")
 public class PostController {
 
-    private final PostService postService;
-    private final UserRepository userRepository;
+    private final PostService postService;       // 생성자 주입
+    private final UserRepository userRepository; // 생성자 주입
 
-    // 생성: POST /api/posts
-    @PostMapping
-    public ResponseEntity<String> create(@RequestBody PostRequestDto dto) {
-        postService.createPost(dto);
-        return ResponseEntity.ok("작성 완료");
+    // ★ 명시적 생성자 주입으로 초기화 보장 (Lombok 필요 없음)
+    @Autowired
+    public PostController(PostService postService,
+                          UserRepository userRepository) {
+        this.postService = postService;
+        this.userRepository = userRepository;
     }
 
-    // 전체 조회: GET /api/posts
+    // 1) 글 작성
+    @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public String createPostMultipart(@ModelAttribute PostRequestDto dto) {
+        postService.createPost(dto);
+        return "작성 완료";
+    }
+
+    @PostMapping(consumes = MediaType.APPLICATION_JSON_VALUE)
+    public String createPostJson(@RequestBody PostRequestDto dto) {
+        postService.createPost(dto);
+        return "작성 완료";
+    }
+
+    // 2) 글 전체 조회
     @GetMapping
-    public List<PostResponseDto> list() {
+    public List<PostResponseDto> getAllPosts() {
         return postService.getAllPosts().stream()
                 .map(postService::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // 상세 조회: GET /api/posts/{id}
+    // 3) 글 상세 조회
     @GetMapping("detail/{id}")
-    public PostResponseDto detail(@PathVariable Long id) {
+    public PostResponseDto getPostById(@PathVariable Long id) {
         return postService.toResponseDto(postService.getPostById(id));
     }
 
-    // 수정: PUT /api/posts/{id}
-    @PutMapping("modify/{id}")
-    public ResponseEntity<String> update(@PathVariable Long id, @RequestBody PostRequestDto dto) {
+    // 4) 글 수정
+    @PutMapping(value = "modify/{id}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public String updatePostMultipart(@PathVariable Long id, @ModelAttribute PostRequestDto dto) {
         postService.updatePost(id, dto);
-        return ResponseEntity.ok("수정 완료");
+        return "수정 완료";
     }
 
-    // 삭제: DELETE /api/posts/{id}
+    @PutMapping(value = "modify/{id}", consumes = MediaType.APPLICATION_JSON_VALUE)
+    public String updatePostJson(@PathVariable Long id, @RequestBody PostRequestDto dto) {
+        postService.updatePost(id, dto);
+        return "수정 완료";
+    }
+
+    // 5) 글 삭제
     @DeleteMapping("delete/{id}")
-    public ResponseEntity<String> delete(@PathVariable Long id) {
+    public String deletePost(@PathVariable Long id) {
         postService.deletePost(id);
-        return ResponseEntity.ok("삭제 완료");
+        return "삭제 완료";
     }
 
     // 작성자 공개 정보 조회 (loginid 기준): GET /api/posts/author?loginid=xxx
@@ -73,9 +98,11 @@ public class PostController {
                 .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
-    // 최신 글 이미지 경로: GET /api/posts/latest-images
+
+    //
     @GetMapping("/latest-images")
-    public List<String> latestImages() {
+    public List<String> getLatestPostImages() {
         return postService.getLatestPostImages();
     }
+
 }
